replace strings concatenations